--- a/FMS/FMS.csproj
+++ b/FMS/FMS.csproj
@@ -84,9 +84,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Models\ApplicationData\AppData.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Models\Resources\Icons\DeleteBlack.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -351,7 +348,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Models\ApplicationData\AppData.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Models\ApplicationData\" />
   </ItemGroup>
 
 </Project>
